--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "nuxt": "^2.17.0"
+    "glob-parent": ">=5.1.2",
+    "nuxt": "^2.17.0",
+    "semver": ">=7.5.2"
   }
 }
